# tokoro

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
bench/: mock_backend.py
docs/: benchmarks.md  design.md  knowledge.md  phase1_improvements.md  roadmap.md
src/: config.cpp  config.hpp  file_handler.cpp  file_handler.hpp  http_message.hpp  http_parser.cpp  http_parser.hpp  main.cpp  server.cpp  server.hpp  socket.cpp  socket.hpp  thread_pool.cpp  thread_pool.hpp
tests/: test_file_handler.cpp  test_http_parser.cpp  test_socket.cpp  test_thread_pool.cpp
www/: index.html
